# caviar

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  caviar.cc  caviar.el  caviar.h  caviar.sln  caviar.vcxproj  caviar.vcxproj.filters  fsd.cc  fsd.h  main.cc  project.clj
.github/workflows/: linux-test.yml  test.yml  windows-test.yml
src/caviar/: core.clj  handler.clj  reader.clj
test/caviar/: core_test.clj
tests/: diff_test.cc  diff_tests.cc
tests/fsd/: demo.fsd  new.fsd  no_plan.fsd  start.fsd
